<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/msg_tip"
        android:textColor="@color/black"
        android:fontFamily="@font/nanum_barun_gothic"
        android:textSize="18sp"
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/msg_shake_tip_content"
        android:fontFamily="@font/nanum_barun_gothic"
        android:textSize="15sp"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/confirm"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_confirm"/>

</LinearLayout>