<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_close_black_48dp" />

            <com.example.kjh.shakeit.view.ClearEditText
                android:id="@+id/inputEmail"
                android:layout_weight="1"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_edge_back_white"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nanum_barun_gothic"
                android:hint="@string/input_email_hint"
                android:inputType="textEmailAddress"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/result_layout"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_margin="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_basic_profile"
            android:contentDescription="@string/msg_profile_image"
            app:civ_border_color="@color/background_grey_primary"
            app:civ_border_width="0.7dp" />

        <TextView
            android:id="@+id/inputName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:textColor="@color/black"
            android:textSize="21sp"/>

        <TextView
            android:id="@+id/already_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/msg_for_already_friend"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/add_friend"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_add_friend"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_result_layout"
        android:orientation="vertical"
        android:layout_margin="64dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_user_not_found"
            android:textColor="@color/background_grey_dark2"
            android:textSize="21sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textColor="@color/background_grey_primary"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/msg_user_not_found_content"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>