<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:src="@drawable/ic_close_black_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/nanum_barun_gothic"
            android:text="@string/msg_wire"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wire"
            android:visibility="gone"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_gravity="end"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_send"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:src="@drawable/ic_basic_profile"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:civ_border_color="@color/background_grey_light1"
            app:civ_border_width="0.7dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/nanum_barun_gothic"
            android:layout_gravity="center_vertical"
            android:text="@string/msg_to"/>

    </LinearLayout>

    <com.example.kjh.shakeit.view.ClearEditText
        android:id="@+id/amount"
        android:inputType="number"
        android:hint="@string/msg_wire_amount"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24dp"
        android:maxLength="9"
        android:textColor="@color/black"
        android:background="@drawable/shape_round_edge_back_light_gray"
        android:textCursorDrawable="@drawable/color_cursor"
        android:fontFamily="@font/nanum_barun_gothic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/status"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:textColor="@color/black"
            android:fontFamily="@font/nanum_barun_gothic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lack_point"
            android:visibility="gone"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/nanum_barun_gothic"
            android:text="@string/msg_for_lack_of_point_slide"/>

    </LinearLayout>

</LinearLayout>