<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:src="@drawable/ic_close_white_24dp" />

        <TextView
            android:id="@+id/apply"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_gravity="end"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_apply"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/profile_image"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@color/background_grey_light2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 원본 -->
        <LinearLayout
            android:id="@+id/original"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/originalImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/background_grey_primary"
                app:civ_border_width="0.7dp" />
            <TextView
                android:text="@string/msg_original"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- 흑백 변환 -->
        <LinearLayout
            android:id="@+id/gray"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/grayImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/background_grey_primary"
                app:civ_border_width="0.7dp" />
            <TextView
                android:text="@string/msg_gray"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- 흐림 변환 -->
        <LinearLayout
            android:id="@+id/blur"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/blurImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/background_grey_primary"
                app:civ_border_width="0.7dp" />
            <TextView
                android:text="@string/msg_blur"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- 대비 변환 -->
        <LinearLayout
            android:id="@+id/contrast"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/contrastImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/background_grey_primary"
                app:civ_border_width="0.7dp" />
            <TextView
                android:text="@string/msg_contrast"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- 밝기 변환 -->
        <LinearLayout
            android:id="@+id/brightness"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/brightnessImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="@color/background_grey_primary"
                app:civ_border_width="0.7dp" />
            <TextView
                android:text="@string/msg_brightness"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>