<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:src="@drawable/ic_back_black_48dp" />

        <TextView
            android:id="@+id/update"
            android:visibility="gone"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:layout_gravity="end"
            android:fontFamily="@font/nanum_barun_gothic"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_update"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/update_profile_image"
        android:padding="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:background="@color/transparent"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_basic_profile"
            android:contentDescription="@string/msg_profile_image"
            app:civ_border_color="@color/background_grey_primary"
            app:civ_border_width="0.7dp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_alignBottom="@+id/profile_image"
            android:src="@drawable/ic_edit_camera"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:text="@string/input_name_hint"
        android:textSize="18sp" />

    <com.example.kjh.shakeit.view.ClearEditText
        android:id="@+id/inputName"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_edge_back_white"
        android:fontFamily="@font/nanum_barun_gothic"
        android:textCursorDrawable="@drawable/color_cursor"
        android:hint="@string/input_name_hint"
        android:inputType="text"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/background_grey_dark2"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:text="@string/input_status_message_hint"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.example.kjh.shakeit.view.ClearEditText
        android:id="@+id/inputStatusMessage"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_edge_back_white"
        android:fontFamily="@font/nanum_barun_gothic"
        android:hint="@string/input_status_message_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/background_grey_dark2"
        android:textSize="18sp" />

</LinearLayout>